--- a/grandioso/css/header.scss
+++ b/grandioso/css/header.scss
@@ -110,6 +110,10 @@
     &__topInner {
         padding-top: 167px;
         padding-bottom: 70px;
+        &_maxWidth {
+            max-width: 700px;
+            margin: auto;
+        }
     }
     &__date {
         display: block;
