--- a/grandioso/css/pageCategory.scss
+++ b/grandioso/css/pageCategory.scss
@@ -56,3 +56,19 @@
         padding: 0;
     }
 }
+
+.filter {
+    background-color: $white;
+    border-top: $border;
+    border-bottom: $border;
+    margin: 40px 0;
+    &__inner {
+        display: flex;
+        padding: 20px 0;
+        justify-content: space-between;
+    }
+}
+
+.products {
+    margin: 70px 0 30px;
+}
