--- a/grandioso/css/pageCase.scss
+++ b/grandioso/css/pageCase.scss
@@ -34,9 +34,6 @@
     &__galeryDots {
         margin-top: 40px;
     }
-    .slick-active button {
-        background-color: $black;
-    }
     &__descriptionWrap {
         margin: 70px 0 100px;
         @media (max-width: 991px) {
@@ -62,5 +59,39 @@
         border: 1px solid $black;
         border-radius: 50%;
         background-color: transparent;
+    }
+    .slick-active button {
+        background-color: $black;
+    }
+    &_white {
+        & button {
+            margin: 0;
+            padding: 0;
+            font-size: 0;
+            width: 10px;
+            height: 10px;
+            border: 1px solid $white;
+            border-radius: 50%;
+            background-color: transparent;
+        }
+        .slick-active button {
+            background-color: $white;
+        }
+    }
+    &_sliderBg {
+        position: absolute;
+        bottom: 10vh;
+        right: 10vw;
+        z-index: 1;
+        padding: 0;
+        margin: 0;
+        @media (max-width: 991px) {
+            bottom: -45vh;
+            right: 10vw;
+        }
+        @media (max-width: 767px) {
+            bottom: 2vh;
+            right: 13px;
+        }
     }
 }
