--- a/grandioso/css/pageMain.scss
+++ b/grandioso/css/pageMain.scss
@@ -10,14 +10,30 @@
             height: 100%;
         }
     }
+    &__content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        &>div {
+            height: 100%;
+        }
+    }
     &__colText {
         background-color: $violet;
         color: $white;
         height: 100%;
         display: flex;
     }
+    &__colBg {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
     &__text {
-        margin: auto 0 80px 0;
+        margin: auto 0 10vh 0;
+        max-width: 350px;
     }
     @media (max-width: 991px) {
         // .container {
@@ -25,6 +41,10 @@
         //     margin: 0;
         //     padding: 0;
         // }
+        &__text {
+            margin: auto 0;
+            max-width: 350px;
+        }
         &__row {
             display: flex;
             flex-direction: column-reverse;
@@ -35,6 +55,36 @@
         &__colText {
             height: 50%;
         }
+    }
+    @media (max-width: 767px) {
+        &__colBg {
+            height: 40%;
+            padding-top: 50px;
+        }
+        &__colText {
+            height: 60%;
+        }
+    }
+}
+
+.sliderBg {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    &__item {
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100%;
+        width: 100%;
+        position: absolute !important;
+        left: 0 !important;
+    }
+    .slick-track,
+    .slick-list {
+        height: 100% !important;
+        width: 100% !important;
     }
 }
 
