--- a/grandioso/css/header.scss
+++ b/grandioso/css/header.scss
@@ -48,6 +48,9 @@
     justify-content: start;
     cursor: pointer;
     user-select: none;
+    @media (max-width: 767px) {
+        transform: scale(0.8);
+    }
     &__text {
         margin: 0;
         padding: 0;
