--- a/grandioso/css/pageCategory.scss
+++ b/grandioso/css/pageCategory.scss
@@ -57,18 +57,151 @@
     }
 }
 
+.subcategory {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    li {
+        list-style-type: none;
+        margin: 0 10px;
+        padding: 0;
+        color: $black;
+        a {
+            color: $black;
+            font-size: 18px;
+            font-family: Ubuntu;
+        }
+        span {
+            font-size: 12px;
+            position: relative;
+            bottom: 8px;
+            left: 6px;
+        }
+    }
+}
+
 .filter {
     background-color: $white;
     border-top: $border;
     border-bottom: $border;
     margin: 40px 0;
+    position: relative;
+    &__сlose {
+        display: none;
+    }
     &__inner {
         display: flex;
         padding: 20px 0;
         justify-content: space-between;
+    }
+    &__body {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        // height: 200px;
+        background-color: $white;
+        // border: 1px solid red;
+        z-index: 1;
+        // padding: 30px 0;
+        border-top: $border;
+        border-bottom: $border;
+    }
+    &__row {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    &__item {
+        margin-bottom: 45px;
+    }
+    &__itemHead {
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 0;
+        & img {
+            display: none;
+        }
+    }
+    &__itemBody {
+        max-height: 200px;
+        height: 200px;
+        width: 100%;
+        // overflow: hidden;
+        // overflow-y: scroll;
+    }
+    &__buttonWrap {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    &__buttonItem {
+        flex-basis: 50%;
+        display: flex;
+        align-items: center;
+        min-height: 50px;
+    }
+    @media (max-width: 767px) {
+        & {
+            position: static;
+        }
+        &__body {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 10000;
+            overflow: hidden;
+            overflow-y: scroll;
+        }
+        &__сlose {
+            display: block;
+            width: 100%;
+            height: 60px;
+            border-bottom: $border;
+            display: flex;
+            img {
+                margin: auto;
+            }
+        }
+        &__item {
+            margin-bottom: 0;
+            border-bottom: $border;
+            &:last-of-type {
+                // border-bottom: none
+            }
+            &:first-of-type {
+                // border-top: $border;
+            }
+        }
+        &__itemHead {
+            & img {
+                display: block;
+            }
+        }
+        &__itemBody {
+            display: none;
+        }
+        &__buttonItem {
+            flex-basis: 100%;
+        }
     }
 }
 
 .products {
     margin: 70px 0 30px;
 }
+
+// .scroll-bar.vertical {
+//     width: 4px;
+// }
+// .scroll-bar.vertical .thumb {
+//     background-color: $gray;
+//     border-radius: 10px;
+//     transition: 0.1s;
+// }
+// .scrollable .viewport .overview {
+//     transition: 0.1s;
+// }
