--- a/grandioso/css/pageCategory.scss
+++ b/grandioso/css/pageCategory.scss
@@ -1,207 +1,217 @@
-.cartProduct {
-    position: relative;
-    border: $border;
-    background-color: $white;
-    padding: 10px 10px 50px 10px;
-    margin-bottom: 40px;
-    &__imgWrap {
-        width: 100%;
-        height: auto;
-        margin-bottom: 26px;
-        background-color: #ececec;
-    }
-    &__img {
-        width: 100%;
-        height: auto;
-    }
-    &__tags {
-        position: absolute;
-        top: 30px;
-        left: 30px;
-        display: flex;
-    }
-    &__tag {
-        width: 60px;
-        height: 60px;
-        text-align: center;
-        line-height: 60px;
-        color: $white;
-        background-color: $violet;
-        border-radius: 50%;
-        font-weight: 600;
-        font-size: 12px;
-        text-align: center;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-    }
-    &__collection {
-        display: block;
-        text-align: center;
-        color: $gray;
-        margin: 0;
-        padding: 0;
-        margin-bottom: 15px;
-    }
-    &__title {
-        display: block;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-        margin-bottom: 22px;
-    }
-    &__cost {
-        display: block;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-    }
-}
-
-.subcategory {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-    li {
-        list-style-type: none;
-        margin: 0 10px;
-        padding: 0;
-        color: $black;
-        a {
-            color: $black;
-            font-size: 18px;
-            font-family: Ubuntu;
-        }
-        span {
-            font-size: 12px;
-            position: relative;
-            bottom: 8px;
-            left: 6px;
-        }
-    }
-}
-
-.filter {
-    background-color: $white;
-    border-top: $border;
-    border-bottom: $border;
-    margin: 40px 0;
-    position: relative;
-    &__сlose {
-        display: none;
-    }
-    &__inner {
-        display: flex;
-        padding: 20px 0;
-        justify-content: space-between;
-    }
-    &__body {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        // height: 200px;
+    .cartProduct {
+        position: relative;
+        border: $border;
         background-color: $white;
-        // border: 1px solid red;
-        z-index: 1;
-        // padding: 30px 0;
+        padding: 10px 10px 50px 10px;
+        margin-bottom: 40px;
+        &__imgWrap {
+            width: 100%;
+            height: auto;
+            margin-bottom: 26px;
+            background-color: #ececec;
+        }
+        &__img {
+            width: 100%;
+            height: auto;
+        }
+        &__tags {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            display: flex;
+        }
+        &__tag {
+            width: 60px;
+            height: 60px;
+            text-align: center;
+            line-height: 60px;
+            color: $white;
+            background-color: $violet;
+            border-radius: 50%;
+            font-weight: 600;
+            font-size: 12px;
+            text-align: center;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+        }
+        &__collection {
+            display: block;
+            text-align: center;
+            color: $gray;
+            margin: 0;
+            padding: 0;
+            margin-bottom: 15px;
+        }
+        &__title {
+            display: block;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            margin-bottom: 22px;
+        }
+        &__cost {
+            display: block;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+    }
+    
+    .subcategory {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
+        li {
+            list-style-type: none;
+            margin: 0 10px;
+            padding: 0;
+            color: $black;
+            a {
+                color: $black;
+                font-size: 18px;
+                font-family: Ubuntu;
+            }
+            span {
+                font-size: 12px;
+                position: relative;
+                bottom: 8px;
+                left: 6px;
+            }
+        }
+    }
+    
+    .filter {
+        background-color: $white;
         border-top: $border;
         border-bottom: $border;
-    }
-    &__row {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    &__item {
-        margin-bottom: 45px;
-    }
-    &__itemHead {
-        display: flex;
-        justify-content: space-between;
-        padding: 20px 0;
-        & img {
+        margin: 40px 0;
+        position: relative;
+        &__сlose {
             display: none;
         }
-    }
-    &__itemBody {
-        max-height: 200px;
-        height: 200px;
-        width: 100%;
-        // overflow: hidden;
-        // overflow-y: scroll;
-    }
-    &__buttonWrap {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-    &__buttonItem {
-        flex-basis: 50%;
-        display: flex;
-        align-items: center;
-        min-height: 50px;
-    }
-    @media (max-width: 767px) {
-        & {
-            position: static;
+        &__inner {
+            display: flex;
+            padding: 20px 0;
+            justify-content: space-between;
         }
         &__body {
-            position: fixed;
-            top: 0;
+            position: absolute;
+            top: 100%;
             left: 0;
             width: 100%;
-            height: 100%;
-            z-index: 10000;
-            overflow: hidden;
-            overflow-y: scroll;
-        }
-        &__сlose {
-            display: block;
-            width: 100%;
-            height: 60px;
+            // height: 200px;
+            background-color: $white;
+            // border: 1px solid red;
+            z-index: 1;
+            // padding: 30px 0;
+            border-top: $border;
             border-bottom: $border;
+        }
+        &__row {
             display: flex;
-            img {
-                margin: auto;
-            }
+            flex-wrap: wrap;
         }
         &__item {
-            margin-bottom: 0;
-            border-bottom: $border;
-            &:last-of-type {
-                // border-bottom: none
-            }
-            &:first-of-type {
-                // border-top: $border;
-            }
+            margin-bottom: 45px;
         }
         &__itemHead {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 0;
             & img {
-                display: block;
+                display: none;
             }
         }
         &__itemBody {
-            display: none;
+            max-height: 200px;
+            height: 200px;
+            width: 100%;
+            // overflow: hidden;
+            // overflow-y: scroll;
+        }
+        &__buttonWrap {
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
         }
         &__buttonItem {
-            flex-basis: 100%;
+            flex-basis: 50%;
+            display: flex;
+            align-items: center;
+            min-height: 50px;
+        }
+        @media (max-width: 767px) {
+            & {
+                position: static;
+            }
+            &__body {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 10000;
+                overflow: hidden;
+                overflow-y: scroll;
+            }
+            &__сlose {
+                display: block;
+                width: 100%;
+                height: 60px;
+                border-bottom: $border;
+                display: flex;
+                img {
+                    margin: auto;
+                }
+            }
+            &__item {
+                margin-bottom: 0;
+                border-bottom: $border;
+                &:last-of-type {
+                    // border-bottom: none
+                }
+                &:first-of-type {
+                    // border-top: $border;
+                }
+            }
+            &__itemHead {
+                & img {
+                    display: block;
+                }
+            }
+            &__itemBody {
+                display: none;
+            }
+            &__buttonItem {
+                flex-basis: 100%;
+            }
         }
     }
-}
-
-.products {
-    margin: 70px 0 30px;
-}
-
-// .scroll-bar.vertical {
-//     width: 4px;
-// }
-// .scroll-bar.vertical .thumb {
-//     background-color: $gray;
-//     border-radius: 10px;
-//     transition: 0.1s;
-// }
-// .scrollable .viewport .overview {
-//     transition: 0.1s;
-// }
+    
+    .products {
+        margin: 70px 0 30px;
+    }
+    
+    .scroll-bar.vertical {
+        width: 4px;
+    }
+    
+    .scroll-bar.vertical .thumb {
+        background-color: $gray;
+        border-radius: 10px;
+        transition: 0.1s;
+    }
+    
+    .scrollable .viewport .overview {
+        transition: 0.1s;
+    }
+    
+    .simplebar-scrollbar::before {
+        background-color: $gray !important;
+    }
+    
+    .simplebar-track.simplebar-vertical {
+        width: 8px !important;
+    }
