--- a/grandioso/css/style.css
+++ b/grandioso/css/style.css
@@ -2262,6 +2262,30 @@ body {
   margin: 70px 0 30px;
 }
 
+.scroll-bar.vertical {
+  width: 4px;
+}
+
+.scroll-bar.vertical .thumb {
+  background-color: #848486;
+  border-radius: 10px;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.scrollable .viewport .overview {
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.simplebar-scrollbar::before {
+  background-color: #848486 !important;
+}
+
+.simplebar-track.simplebar-vertical {
+  width: 8px !important;
+}
+
 .pageBrands__selectWrap {
   margin: auto;
   width: 100%;
