--- a/grandioso/css/pageCategory.scss
+++ b/grandioso/css/pageCategory.scss
@@ -63,6 +63,7 @@
         flex-wrap: wrap;
         margin: 0;
         padding: 0;
+        margin-top: 50px;
         li {
             list-style-type: none;
             margin: 0 10px;
@@ -97,6 +98,7 @@
             justify-content: space-between;
         }
         &__body {
+            display: none;
             position: absolute;
             top: 100%;
             left: 0;
@@ -108,6 +110,7 @@
             // padding: 30px 0;
             border-top: $border;
             border-bottom: $border;
+            padding-top: 45px;
         }
         &__row {
             display: flex;
@@ -126,7 +129,7 @@
         }
         &__itemBody {
             max-height: 200px;
-            height: 200px;
+            // height: 200px;
             width: 100%;
             // overflow: hidden;
             // overflow-y: scroll;
@@ -155,6 +158,7 @@
                 z-index: 10000;
                 overflow: hidden;
                 overflow-y: scroll;
+                padding-top: 0;
             }
             &__сlose {
                 display: block;
@@ -209,9 +213,18 @@
     }
     
     .simplebar-scrollbar::before {
-        background-color: $gray !important;
+        background-color: $black !important;
+        top: 2px !important;
+        bottom: 2px !important;
+        width: 3px !important;
+        left: -1px !important;
+        z-index: 1 !important;
+        opacity: 1 !important;
     }
     
     .simplebar-track.simplebar-vertical {
-        width: 8px !important;
+        width: 1px !important;
+        background-color: $greyLight2 !important;
+        overflow: visible !important;
+        right: 5px !important;
     }
