--- a/grandioso/css/pageCase.scss
+++ b/grandioso/css/pageCase.scss
@@ -33,6 +33,9 @@
     }
     &__galeryDots {
         margin-top: 40px;
+        @media (max-width: 991px) {
+            margin-top: 30px;
+        }
     }
     &__descriptionWrap {
         margin: 70px 0 100px;
