--- a/grandioso/css/pageMain.scss
+++ b/grandioso/css/pageMain.scss
@@ -90,10 +90,22 @@
 }
 
 .category {
-    padding: 0 0 100px;
+    padding: 0 0 110px;
+    @media (max-width: 991px) {
+        padding: 0 0 70px;
+    }
     color: $white;
     &__item {
-        height: 280px;
+        height: 450px;
+        @media (max-width: 1365px) {
+            height: 300px;
+        }
+        @media (max-width: 991px) {
+            height: 280px;
+        }
+        @media (max-width: 767px) {
+            height: 180px;
+        }
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -135,6 +147,9 @@
 
 .offers {
     padding: 100px 0;
+    @media (max-width: 767px) {
+        padding: 60px 0;
+    }
     &__title {
         text-align: center;
         margin-bottom: 60px;
@@ -151,6 +166,9 @@
 .partners {
     overflow: hidden;
     padding: 100px 0;
+    @media (max-width: 767px) {
+        padding: 60px 0;
+    }
     background-color: $greyLight1;
     background: linear-gradient(to bottom, $greyLight1 65%, $white 65%);
     &__title {
