--- a/grandioso/css/pageProduct.scss
+++ b/grandioso/css/pageProduct.scss
@@ -24,6 +24,9 @@
         position: sticky;
         top: 0px;
         padding: 80px 0;
+        @media (max-width: 992px) {
+            padding: 60px 0 0;
+        }
     }
     &__button {
         padding: 20px;
@@ -54,6 +57,7 @@
     &__moreTitle {
         display: block;
         text-align: center;
+        margin-top: 0;
         margin-bottom: 75px;
         @media (max-width: 767px) {
             margin-bottom: 40px;
