--- a/grandioso/css/header.scss
+++ b/grandioso/css/header.scss
@@ -19,6 +19,7 @@
         justify-content: space-between;
         align-items: center;
         height: 100%;
+        padding: 0 12px 0 13px;
     }
     &__right {
         display: flex;
