--- a/grandioso/css/pageMain.scss
+++ b/grandioso/css/pageMain.scss
@@ -175,6 +175,9 @@
         text-align: center;
         max-width: 840px;
         margin: 0 auto 60px;
+        @media (max-width: 767px) {
+            margin: 0 auto 40px;
+        }
     }
     &__item {
         width: 650px !important;
