--- a/grandioso/css/style.scss
+++ b/grandioso/css/style.scss
@@ -17,6 +17,20 @@ $border: 1px solid $greyLight2;
 
 a {
     text-decoration: none !important;
+    color: $black;
+    transition: 0.3s;
+    & * {
+        transition: 0.3s;
+    }
+    &:hover {
+        color: $gray;
+    }
+    &:hover * {
+        color: $black;
+    }
+    & *:hover {
+        color: $gray;
+    }
 }
 
 h1,
@@ -138,7 +152,7 @@ li,
     &:hover,
     &:active,
     &:focus {
-        color: $black;
+        // color: $black;
     }
     &_violet {
         width: 100%;
@@ -174,12 +188,13 @@ li,
     background-color: transparent;
     margin: 0;
     padding: 0;
+    padding-bottom: 2px;
     border: none;
     position: relative;
     &::after {
         position: absolute;
         content: "";
-        bottom: -2px;
+        bottom: 0;
         right: 0;
         width: 100%;
         height: 1px;
